--- a/memo_binder/select.html
+++ b/memo_binder/select.html
@@ -5,5 +5,9 @@
 </head>
 <body>
     <h1>メモバインダー</h1>
+
+    <form action="./">
+        <input type="button" name="add" value="メモを追加" id="">
+    </form>
 </body>
 </html>
